--- a/less/blocks/welcome-to-shop-slider.less
+++ b/less/blocks/welcome-to-shop-slider.less
@@ -40,6 +40,7 @@
 .carousel-control .glyphicon-menu-right,
 .carousel-control .glyphicon-menu-left {
   top: 50%;
+  bottom: 50%;
 }
 
 .glyphicon.glyphicon-menu-left,
