--- a/less/blocks/introduction.less
+++ b/less/blocks/introduction.less
@@ -3,8 +3,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: auto;
-  max-height: 1000px;
 
   padding-top: 20px;
   padding-bottom: 50px;
@@ -172,7 +170,7 @@
 
 .introduction__lead-title {
   max-width: 350px;
-  margin-top: 0;
+  margin-top: 20px;
   margin-bottom: 10px;
   padding-left: 50px;
   font-weight: 900;
@@ -423,6 +421,10 @@
 
   .introduction__about {
     width: 40%;
+  }
+
+  .introduction__lead-title {
+    margin-top: 0;
   }
 }
 
