--- a/less/blocks/answers-main.less
+++ b/less/blocks/answers-main.less
@@ -10,6 +10,8 @@
   max-width: 300px;
   margin: 0 auto;
   margin-bottom: 20px;
+
+  font-size: 16px;
   font-weight: 600;
 
   text-align: center;
@@ -46,6 +48,8 @@
 .answers-main__subtitle {
   max-width: 900px;
   margin: 0 auto;
+  padding-left: 10px;
+  padding-right: 25px;
 
   font-size: 15px;
   text-align: center;
@@ -233,6 +237,14 @@
 }
 
 @media (min-width: 800px) {
+
+  .answers-main__title {
+    font-size: 18px;
+  }
+
+  .answers-main__subtitle {
+
+  }
 
   .tab-pane ol,
   .tab-pane ul {
