--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -341,7 +341,7 @@
   padding-bottom: 10px;
   padding-left: 25px;
 
-  width: 60%;
+  width: 190px;
 
   background-color: transparent;
   color: #fff;
