--- a/less/blocks/customer-review-slider.less
+++ b/less/blocks/customer-review-slider.less
@@ -1,6 +1,7 @@
 .customer-review {
   padding-top: 40px;
   padding-right: 25px;
+  padding-bottom: 25px;
   padding-left: 25px;
 
   background-color: @main-color;
@@ -42,7 +43,7 @@
 .customer-review .carousel-inner {
   display: block;
   max-width: 800px;
-  min-height: 300px;
+  height: 200px;
   overflow: visible;
 }
 
