--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -284,6 +284,8 @@
   padding-bottom: 5px;
   padding-left: 10px;
 
+  font-size: 14px;
+
   color: @text-color;
   background-color: #fff;
 
@@ -350,6 +352,20 @@
   vertical-align: middle;
 
   line-height: 0;
+}
+
+.footer__copyright-public {
+  padding-top: 5px;
+  padding-bottom: 5px;
+
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: 300;
+
+  color: #777777;
+  background-color: #f7f7f7;
+
+  text-align: center;
 }
 
 @media (min-width: 550px) {
