--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -37,7 +37,7 @@
 }
 
 .navbar-default .navbar-nav a {
-  font-size: 14px;
+  font-size: 15px;
 }
 
 .navbar-default .navbar-nav > li > a {
@@ -65,12 +65,16 @@
 .navbar-default .navbar-nav .dropdown {
   padding-top: 10px;
   padding-bottom: 10px;
+
+
 }
 
 .navbar-default .navbar-nav .dropdown a {
   padding-top: 5px;
   padding-bottom: 5px;
+  padding-left: 15px;
 
+  border-radius: 3px;
 
   font-weight: 600;
   color: @text-color;
@@ -83,7 +87,7 @@
 }
 
 .navbar-default .navbar-nav .dropdown .caret {
-  margin-left: 57px;
+  margin-left: 65px;
 }
 
 .navbar-default .navbar-toggle:hover,
