--- a/less/blocks/welcome-to-shop.less
+++ b/less/blocks/welcome-to-shop.less
@@ -7,10 +7,12 @@
 
   margin: 0 auto;
 
-  background-image: url(../img/slider-bg.jpg);
+  background-image: url(../img/slider-bg/slider-bg-7.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+
+  transition: all 0.5s;
 }
 
 .welcome-to-shop__title {
