--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -16,6 +16,10 @@
   margin-bottom: 10px;
 }
 
+.jivo-btn {
+  cursor: pointer;
+}
+
 .btn--callback {
   padding-top: 10px;
   padding-bottom: 10px;
