--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1153,6 +1153,7 @@ a:active {
   background-color: #00a3ec;
   color: #fff;
   border-color: #00a3ec;
+  font-size: 16px;
   font-weight: 600;
   border-radius: 6px;
   transition: all 0.8s;
@@ -4077,7 +4078,8 @@ input.tinkoffPayRow--button-pay {
   padding-bottom: 10px;
   padding-left: 25px;
   width: 200px;
-  font-size: 14px;
+  font-weight: 600;
+  font-size: 15px;
   background-color: transparent;
   color: #1eb1fc;
   border: 1px solid;
