--- a/less/blocks/work-process.less
+++ b/less/blocks/work-process.less
@@ -166,6 +166,10 @@
   max-width: 260px;
 
   margin: 0 auto;
+  padding-top: 13px;
+  padding-bottom: 13px;
+
+  font-size: 16px;
   text-align: center;
 }
 
