--- a/less/blocks/tinkoffPaymentForm.less
+++ b/less/blocks/tinkoffPaymentForm.less
@@ -220,7 +220,8 @@ input.tinkoffPayRow--button-pay {
 
   width: 200px;
 
-  font-size: 14px;
+  font-weight: 600;
+  font-size: 15px;
 
   background-color: transparent;
   color: @style-color;
